# message-writer

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  chunk.py  message.py  message_version.py  reference.py  working_set_item.py
apps/api/app/routers/: messages.py  references.py  search.py
apps/api/app/schemas/: __init__.py  claims.py  generation.py  messages.py  references.py  streaming.py
apps/api/app/services/: chunking.py  editing.py  generation.py  grounding_verifier.py  llm_provider.py  pdf_extraction.py  pubmed_client.py  retrieval.py  stream_generation.py
apps/api/tests/: conftest.py  test_chunking.py  test_editing.py  test_generation.py  test_grounding_verifier.py  test_models.py  test_pdf_extraction.py  test_pubmed_client.py  test_retrieval.py  test_stream_generation.py
apps/web/: Dockerfile  package-lock.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/generate/: page.tsx
apps/web/src/app/messages/: page.tsx
apps/web/src/app/messages/[id]/: page.tsx
apps/web/src/app/references/: page.tsx
apps/web/src/app/search/: page.tsx
apps/web/src/components/: claims-display.tsx  nav.tsx  stream-viewer.tsx
apps/web/src/lib/: api.ts
scripts/: eval_grounding.py
